--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,32 +7,55 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 set-option -g default-command "reattach-to-user-namespace -l bash"
 set-option -g default-command "reattach-to-user-namespace -l zsh"
+set-option -g allow-rename off
 
-# This tmux statusbar config was created by tmuxline.vim
-# on Wed, 18 Nov 2015
+#### COLOUR (Solarized 256)
 
-set -g status-bg "colour235"
-set -g message-command-fg "colour222"
-set -g status-justify "left"
-set -g status-left-length "100"
-set -g status "on"
-set -g pane-active-border-fg "colour154"
-set -g message-bg "colour238"
-set -g status-right-length "100"
-set -g status-right-attr "none"
-set -g message-fg "colour222"
-set -g message-command-bg "colour238"
-set -g status-attr "none"
-set -g pane-border-fg "colour238"
-set -g status-left-attr "none"
-setw -g window-status-fg "colour121"
-setw -g window-status-attr "none"
-setw -g window-status-activity-bg "colour235"
-setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour154"
-setw -g window-status-separator ""
-setw -g window-status-bg "colour235"
-set -g status-left "#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour235,nobold,nounderscore,noitalics]"
-set -g status-right "#[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] %Y-%m-%d  %H:%M #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #h "
-setw -g window-status-format "#[fg=colour121,bg=colour235] #I #[fg=colour121,bg=colour235] #W "
-setw -g window-status-current-format "#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I #[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]"
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+# Config for tmux-resurrect
+# for vim
+set -g @resurrect-strategy-vim 'session'
+# for neovim
+set -g @resurrect-strategy-nvim 'session'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
+run-shell ~/clone/path/continuum.tmux
