--- a/.gitconfig
+++ b/.gitconfig
@@ -1,30 +1,13 @@
+name = Samuel Jackson
+email = samueljackson@outlook.com
 [alias]
-[push]
-	default = simple
+        lo = log --oneline
+        co = checkout
+        st = status
+        c = commit
+        d = diff
 [user]
 	name = Samuel Jackson
-	email = samueljackson@outlook.com
-[core]
-	excludesfile = /home/lhs18285/.gitignore
-	editor = vim
-[difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
-[mergetool "sourcetree"]
-	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
-[filter "media"]
-	clean = git-media-clean %f
-	smudge = git-media-smudge %f
-[alias]
-	lo = log --oneline
-	co = checkout
-	st = status
-	c = commit
-	d = diff
-[github]
-	user = samueljackson92
-[ghi]
-[ghi]
-[ghi]
-	token = !security find-internet-password -a samueljackson92 -s github.com -l 'ghi token' -w
+	email = samuel.jackson@stfc.ac.uk
+[push]
+	default = simple
